1999-01-26  Sam Steingold  <sds@goems.com>

	* Makefile.devel: do not use `utils/move-if-change'.

1999-01-26  Sam Steingold  <sds@goems.com>

	MT-safe get_real_time:
	* time.d (get_real_time): take pointer argument; no internal
	statics.
	* lisparit.d: fix calls to `get_real_time'.
	* lispbibl.d: fix declaration of `get_real_time'.

1999-01-25  Sam Steingold  <sds@goems.com>

	* spvw.d: expanded --help, added --license, removed trailing
	whitespace.

1999-01-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (strm_file_name, strm_file_truename, strm_file_handle,
           strm_pipe_pid, strm_x11socket_connect, strm_socket_port,
           strm_socket_host): Offset by 1.
        * stream.d (strm_bitbuffer): New macro, replaces strm_file_bitbuffer.
          (strm_isatty, strm_ihandle, strm_ohandle, strm_field1, strm_field2):
          Offset by 1.
          (strm_field3): Remove macro.
          (strm_handle_extrafields_struct): New field bitsize.
          (HandleStream_bitsize): New macro, replaces FileStream_bitsize.
          (rd_by_iu_I, rd_by_is_I): Update.
          (wr_by_aux_ix): Renamed from wr_by_ix.
          (wr_by_ixu_file, wr_by_ixs_file): Update.
          (rd_by_aux_iax_handle, rd_by_iau_handle, rd_by_ias_handle): New
          functions.
          (rd_by_iau8_handle): Renamed from rd_by_handle.
          (rd_by_array_iau8_handle): Renamed from rd_by_array_handle.
          (close_ihandle): Free the bitbuffer.
          (wr_by_aux_ia_handle, wr_by_iau_handle, wr_by_ias_handle): New
          functions.
          (wr_by_iau8_handle): Renamed from wr_by_handle.
          (wr_by_array_iau8_handle): Renamed from wr_by_array_handle.
          (close_ohandle): Free the bitbuffer.
          (make_unbuffered_file_stream): Add arguments type, eltype_size.
          Create a stream with proper element type, not (OR CHARACTER INTEGER).
          (strm_i_file_extrafields_struct): Remove field bitsize.